# crate

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CamAnonGatePipeline.java  LINT_CHECK  MAKE_PYTHON_PACKAGE.sh  MANIFEST.in  PEP8_CHECK  PUSH_EVERYTHING  README.md  README.rst  RNC_PYTHON_MODULES_IN_USE.py  SET_PATHS.sh  SET_PYTHONPATH.sh  __init__.py  anonymise.py  buildjava.sh  changelog.Debian  estimate_mysql_memory_usage.sh  extract_text.py  launch_makedata.sh  launch_multiprocess_anonymiser.sh  launch_multiprocess_nlp.sh  makedata.py  nlp_manager.py  notes.txt  pipeline.txt  pyproject.toml  pytest.ini  readthedocs.yml  requirements-ubuntu.txt  requirements.txt  rnc_config.py  rnc_crypto.py  rnc_datetime.py  rnc_db.py  rnc_email.py  rnc_extract_text.py  (+22 more)
.github/: dependabot.yml
.github/workflows/: docker.yml  docs.yml  gate.yml  installer.yml  integration-tests.yml  precommit.yml  python-checks.yml  python-tests.yml  release.yml
anon_modules/: shared_anon.py
anonymise/: __init__.py  anon_config.py  anon_constants.py  anon_dd.py  anon_hash.py  anon_regex.py  anonymise.py  launch_makedata.sh  launch_multiprocess_anonymiser.sh  make_demo_database.py  test_anonymisation.py
bug_reports/: check_inner_class_attr_access.py  check_pycharm_generator_hint.py  wkhtmltopdf_wordwrap_1.html  wkhtmltopdf_wordwrap_test.sh
crate/: version.py
crate/anonymise/: __init__.py  anonymise.py  config.py  constants.py  dd.py  hash.py  launch_multiprocess_anonymiser.py  launch_multiprocess_anonymiser.sh  make_demo_database.py  patient.py  regex.py  scrub.py  test_anonymisation.py
crate/crateweb/: manage.py
crate/nlp_manager/: buildjava.sh  launch_multiprocess_nlp.py  nlp_manager.py
crate_anon/: __init__.py  conftest.py  version.py
crate_anon/anonymise/: __init__.py  altermethod.py  anonregex.py  anonymise.py  anonymise_cli.py  anonymise_main.py  check_text_extractor.py  config.py  config_singleton.py  constants.py  crateconfigparser.py  dbholder.py  dd.py  ddr.py  demo_config.py  draft_dd.py  eponyms.py  fetch_wordlists.py  hash.py  launch_multiprocess_anonymiser.py  logsupport.py  make_demo_database.py  models.py  patient.py  print_demo_config.py  regex.py  researcher_report.py  scrub.py  show_counts.py  sqla.py  subproc.py  subset_db.py  summarize_dd.py  test_anonymisation.py  test_extract_text.py
crate_anon/anonymise_webserver/: __init__.py  manage.py
crate_anon/common/: __init__.py  argparse_assist.py  bugfix_flashtext.py  compression.py  constants.py  contenttypes.py  datetimefunc.py  debugfunc.py  dockerfunc.py  exceptions.py  extendedconfigparser.py  file_io.py  fileops.py  formatting.py  future.py  hash.py  inputfunc.py  jsonfunc.py  lang.py  logfunc.py  logsupport.py  memsize.py  nhs.py  parallel.py  profiling.py  regex_helpers.py  spreadsheet.py  sql.py  sql_grammar.py  sql_grammar_factory.py  sqla.py  (+7 more)
crate_anonymise/: __init__.py  anon_config.py  anon_constants.py  anon_dd.py  anon_hash.py  anon_patient.py  anon_regex.py  anon_scrub.py  anon_version.py  anonymise.py  launch_multiprocess_anonymiser.sh  make_demo_database.py  test_anonymisation.py
crate_nlp_manager/: CamAnonGatePipeline.java  nlp_manager.py
debugging/: mssql_without_transaction.py
devnotes/: 2025_01_sqlalchemy2.txt
ditched/: SET_PATHS.sh  SUPERSEDED_mysql_auditor_proxy.py  database_interfaces_rnc_db.odt  javascript_change_form.html  javascript_query_builder.js  select_parser.py  test_daemon_1.py  test_daemon_2.py  test_service_1.py  test_sqla_reflection.py  webview_anon.py  wkhtmltopdf.sh
docs/: .gitignore  CRATE_MANUAL.odt  Makefile  __init__.py  convert_images.py  create_all_autodocs.py  fixed_problems.txt  gate_auto_install.xml  notes.txt  notes_on_database_schemas.txt  notes_on_pickle_json.txt  notes_on_sql_comments.txt  pcmis_information_schema.ods  pipeline.txt  process_doctree.py  rebuild_docs.py  recreate_inclusion_files.py  to_do.txt  webnotes.txt
github_action_scripts/: anonymisation_checks.sh  build_docs.sh  build_gate.sh  change_apt_mirror.sh  docker.sh  docker_db_setup.sh  install_wkhtmltopdf.sh  installer_setup.sh  integration_tests.sh  mysql_docker_setup.sh  odbc_user.ini  odbc_user_container.ini  odbc_user_host.ini  post_installation_checks.sh  python_checks.sh  python_setup.sh  python_tests.sh  set_crate_docker_environment  set_crate_docker_mssql_environment  set_crate_docker_mysql_environment  set_crate_installer_environment  set_crate_installer_mssql_environment  setup_redis.sh  source_database.sql  source_database_mssql.sql  test_nlp_web_config.ini
installer/: enter_crate_container.sh  exec_crate_command.sh  installer-requirements.txt  installer.py  installer.sh  installer_boot.py  installer_bootstrap.py  installer_requirements.txt  restore_crate_envvars.sh  run_crate_command.sh  start_crate.sh  stop_crate.sh
mysql_auditor/: SUPERSEDED_mysql_auditor_proxy.py  mysql_auditor.conf  mysql_auditor.sh  query_auditor_mysqlproxy.lua
nlp_manager/: buildjava.sh  launch_multiprocess_nlp.sh  nlp_manager.py  runjavademo.sh
pre_commit_hooks/: pre_commit_hook.py
pythonlib/: NOTES.txt  RNC_PYTHON_MODULES_IN_USE.py  __init__.py  requirements.txt  rnc_config.py  rnc_crypto.py  rnc_datetime.py  rnc_db.py  rnc_email.py  rnc_extract_text.py  rnc_lang.py  rnc_log.py  rnc_math.py  rnc_nhs.py  rnc_pdf.py  rnc_platform.py  rnc_plot.py  rnc_process.py  rnc_register_db_with_odbc.py  rnc_text.py  rnc_web.py  whisker.py  wsgi_errorreporter.py  wsgi_gzipper.py
specimen_secret_local_settings/: crate_local_settings.py
stubs/: README
tools/: LINT_CHECK  LINT_CHECK.py  LINT_CHECK.sh  PUSH_EVERYTHING  PUSH_EVERYTHING.sh  estimate_mysql_memory_usage.py  generate_new_django_secret_key.py  install_virtualenv.py  install_virtualenv.sh  install_wkhtmltopdf.py  launch_celery_debug.py  launch_celery_debug.sh  launch_django_debug.py  make_favicon.py  make_package.py  make_package.sh  rebuild_reinstall.py  rebuild_reinstall.sh  reformat_source.py  release_new_version.py  wkhtmltopdf.sh
travis_scripts/: pip_install_and_tests
webfrontend/: webview_anon.py
(+1888 files in other folders)
